# Distortion

./: .gitignore  CMakeLists.txt  README.md
cmake/: cpm.cmake
docs/: index.md
plugin/: CMakeLists.txt
plugin/include/Distortion/: Distortion.h  JsonSerializer.h  Parameters.h  PluginEditor.h  PluginProcessor.h
plugin/source/: Distortion.cpp  JsonSerializer.cpp  Parameters.cpp  PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/source/: DistortionTest.cpp
